--- a/app/src/main/res/layout/dialog_agree_terms.xml
+++ b/app/src/main/res/layout/dialog_agree_terms.xml
@@ -2,107 +2,120 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="283dp"
     android:background="@drawable/box_alert">
 
+    <!-- 약관 동의 제목 텍스트-->
     <TextView
         android:id="@+id/textview_agree_terms"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="33.5dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="34dp"
         android:fontFamily="@font/noto_sans_kr_bold"
+        android:includeFontPadding="false"
         android:text="@string/agree_terms"
         android:textColor="@color/general_theme_black"
         android:textSize="17sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2944"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- 약관 전체 동의 체크 버튼-->
     <CheckBox
         android:id="@+id/checkbox_agree_terms"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:button="@drawable/ic_confirm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="@id/textview_agree_terms"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.8972"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/textview_agree_terms" />
 
+    <!-- 약관 내용 박스 -->
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_service_terms"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/bg_rectangle_round"
         android:backgroundTint="@color/system_theme_subwhite"
-        app:layout_constraintEnd_toEndOf="@id/checkbox_agree_terms"
-        app:layout_constraintStart_toStartOf="@id/textview_agree_terms"
-        app:layout_constraintTop_toBottomOf="@id/textview_agree_terms">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textview_agree_terms"
+        app:layout_constraintWidth_percent="0.9111">
 
         <TextView
             android:id="@+id/textview_use_terms"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="19dp"
             android:fontFamily="@font/noto_sans_kr_bold"
-            android:paddingVertical="12.5dp"
-            android:paddingStart="18.5dp"
-            android:paddingEnd="0dp"
+            android:includeFontPadding="false"
+            android:lineHeight="17sp"
             android:text="@string/service_use_terms"
             android:textColor="@color/general_theme_black"
             android:textSize="12sp"
-            app:layout_constraintEnd_toStartOf="@id/checkbox_use_terms"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.1564"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <CheckBox
             android:id="@+id/checkbox_use_terms"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:button="@drawable/ic_confirm"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="9dp"
             app:layout_constraintBottom_toBottomOf="@id/textview_use_terms"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.8972"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/textview_use_terms" />
 
         <TextView
             android:id="@+id/textview_promote_terms"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="31dp"
             android:fontFamily="@font/noto_sans_kr_bold"
-            android:paddingVertical="12.5dp"
-            android:paddingStart="18.5dp"
-            android:paddingEnd="0dp"
+            android:includeFontPadding="false"
+            android:lineHeight="17sp"
             android:text="@string/service_promote_terms"
             android:textColor="@color/general_theme_black"
             android:textSize="12sp"
-            app:layout_constraintEnd_toStartOf="@id/checkbox_promote_terms"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.1564"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_use_terms" />
 
         <CheckBox
             android:id="@+id/checkbox_promote_terms"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:button="@drawable/ic_confirm"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="84dp"
-            android:layout_marginEnd="9dp"
             app:layout_constraintBottom_toBottomOf="@id/textview_promote_terms"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.8972"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@id/textview_promote_terms" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <!-- 시작하기 버튼 -->
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_start"
         style="@style/DefaultButton"
-        android:layout_width="318dp"
+        android:layout_width="0dp"
         android:layout_height="56dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="12dp"
+        android:lineHeight="26sp"
         android:text="@string/start"
-        android:layout_marginBottom="36dp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/layout_service_terms" />
+        app:layout_constraintTop_toBottomOf="@id/layout_service_terms"
+        app:layout_constraintWidth_percent="0.8833" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
