[Refactor] databinding과 viewbinding을 사용하여 activity에서 observe하는 코드 제거

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -101,6 +101,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/noto_sans_kr_bold"
                 android:includeFontPadding="false"
+                android:text="@{viewmodel.diagnosis.item}"
                 android:textColor="@color/general_theme_black"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -116,6 +117,7 @@
                 android:includeFontPadding="false"
                 android:textColor="@color/system_theme_gray"
                 android:textSize="12sp"
+                app:formattedDate="@{viewmodel.diagnosis.time}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
