--- a/app/src/main/res/layout/activity_settings_alert.xml
+++ b/app/src/main/res/layout/activity_settings_alert.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="android.widget.Switch"/>
+
         <variable
             name="viewmodel"
             type="com.gachon.ttuckttak.ui.setting.SettingsAlertViewmodel" />
@@ -75,7 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:checked="@{viewmodel.pushStatus}"
-            android:onClick="@{() -> viewmodel.updateEventOrFunctionUpdateNotification()}"
+            android:onClick="@{(view) -> viewmodel.updateEventOrFunctionUpdateNotification(((Switch)view).isChecked)}"
             android:thumb="@drawable/switch_thumb"
             android:track="@drawable/switch_track"
             app:layout_constraintBottom_toBottomOf="@id/textview_eventPushAlert"
@@ -112,7 +114,7 @@
             android:layout_width="wrap_content"
             android:layout_height="48dp"
             android:checked="@{viewmodel.nightPushStatus}"
-            android:onClick="@{() -> viewmodel.updateNightPushNotification()}"
+            android:onClick="@{(view) -> viewmodel.updateNightPushNotification(((Switch)view).isChecked)}"
             android:thumb="@drawable/switch_thumb"
             android:track="@drawable/switch_track"
             app:layout_constraintBottom_toBottomOf="@id/textview_nightTimePushAlert"
