--- a/app/src/main/res/layout/activity_reset_pw.xml
+++ b/app/src/main/res/layout/activity_reset_pw.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewmodel"
             type="com.gachon.ttuckttak.ui.login.ResetPwViewmodel" />
@@ -20,73 +21,83 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/noto_sans_kr_bold"
+            android:includeFontPadding="false"
             android:text="@string/pw_reset_link"
             android:textColor="@color/general_theme_white"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.2" />
+            app:layout_constraintVertical_bias="0.1510" />
 
         <TextView
             android:id="@+id/textview_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
             android:fontFamily="@font/noto_sans_kr_bold"
+            android:includeFontPadding="false"
             android:text="@{viewmodel.email}"
             android:textColor="@color/general_theme_black"
             android:textFontWeight="900"
             android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="@id/textview_pw_reset_link"
-            app:layout_constraintStart_toStartOf="@id/textview_pw_reset_link"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textview_pw_reset_link"
+            app:layout_constraintVertical_bias="0.0515"
             tools:text="@string/user_email" />
 
         <TextView
             android:id="@+id/textview_attachLink"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
             android:fontFamily="@font/noto_sans_kr_regular"
             android:gravity="center"
+            android:includeFontPadding="false"
             android:text="@string/attach_link"
             android:textColor="@color/general_theme_white"
-            android:textFontWeight="400"
             android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="@id/textview_email"
-            app:layout_constraintStart_toStartOf="@id/textview_email"
-            app:layout_constraintTop_toBottomOf="@id/textview_email" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textview_email"
+            app:layout_constraintVertical_bias="0.0566" />
 
         <TextView
             android:id="@+id/textview_additional"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
             android:fontFamily="@font/noto_sans_kr_regular"
             android:gravity="center"
+            android:includeFontPadding="false"
             android:text="@string/additional_message"
             android:textColor="@color/general_theme_white"
-            android:textFontWeight="400"
             android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="@id/textview_attachLink"
-            app:layout_constraintStart_toStartOf="@id/textview_attachLink"
-            app:layout_constraintTop_toBottomOf="@id/textview_attachLink" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textview_attachLink"
+            app:layout_constraintVertical_bias="0.1304" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button_close"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:background="@drawable/bg_rectangle_round"
             android:backgroundTint="@color/general_theme_white"
+            android:fontFamily="@font/noto_sans_kr_bold"
+            android:includeFontPadding="false"
             android:onClick="@{() -> viewmodel.goLandingActivity()}"
             android:text="@string/btn_close"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@id/textview_additional"
-            app:layout_constraintStart_toStartOf="@id/textview_additional"
-            app:layout_constraintTop_toBottomOf="@id/textview_additional" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHeight_percent="0.07"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textview_additional"
+            app:layout_constraintVertical_bias="0.3946"
+            app:layout_constraintWidth_percent="0.8833" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
