[REFACTOR] 구글, 카카오 아이콘 위치 변경

--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -82,6 +82,7 @@
             android:background="@drawable/bg_rectangle_round"
             android:backgroundTint="@color/general_theme_white"
             android:drawableStart="@drawable/img_logo_google"
+            android:paddingStart="24dp"
             android:fontFamily="@font/noto_sans_kr_bold"
             android:gravity="center"
             android:includeFontPadding="false"
@@ -107,6 +108,7 @@
             android:background="@drawable/bg_rectangle_round"
             android:backgroundTint="#FEE500"
             android:drawableStart="@drawable/img_logo_kakao"
+            android:paddingStart="24dp"
             android:fontFamily="@font/noto_sans_kr_bold"
             android:gravity="center"
             android:includeFontPadding="false"
